# deepseek-textbook

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.bat
data/: base_prompt.txt  python_tutorial.txt
epub/: python_tutorial.epub
src/: epub_generator.py  main.py
textbook/python_tutorial/: Python基础语法.md  函数定义与调用.md  变量与数据类型.md  异常处理.md  控制流程.md  文件操作.md  标准库概览.md  模块与包.md  面向对象编程.md  项目实践.md
